--- a/package.json
+++ b/package.json
@@ -1,50 +1,38 @@
 {
-    "name": "phonebook",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.6.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "mongoose": "^8.5.3",
-        "morgan": "^1.10.0"
-    },
-    "scripts": {
-        "front-start": "react-scripts start",
-        "front-build": "react-scripts build",
-        "front-test": "react-scripts test",
-        "front-eject": "react-scripts eject",
-        "back-start": "cd backend && node index.js",
-        "back-dev": "cd backend && nodemon index.js",
-        "back-test": "echo \\\"Error: no test specified\\\" && exit 1",
-        "lint": "eslint ."
-    },
-    "browserslist": {
-        "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-        ],
-        "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-      "@eslint/js": "^9.9.1",
-      "@flydotio/dockerfile": "^0.5.8",
-      "@stylistic/eslint-plugin-js": "^2.7.1",
-      "eslint": "^9.9.1",
-      "globals": "^15.9.0",
-      "nodemon": "^3.1.4"
-    }
+  "name": "fullstackopen-part11-20_",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "server": "node backend/index.js",
+    "start": "concurrently \"npm run dev\" \"npm run server\""
+  },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5",
+    "morgan": "^1.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "vite": "^6.0.5"
+  }
 }
