--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,3 +16,5 @@ jobs:
       - uses: actions/setup-node@v4
       - name: Install dependencies
         run: npm install
+      - name: Lint
+        run: npm run lint
