--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "node": "^18.20.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
