--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,9 @@ jobs:
         run: npm install
       - name: Lint
         run: npm run lint
-      - name: Test front end
+      - name: Test frontend
         run: npm run test:frontend
-      - name:
+      - name: Test backend
         run: npm run test:backend
+      - name: Test e2e
+        run: npm run test:e2e
