--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
         run: npm install
       - name: Lint
         run: npm run lint
+      - name: Build
+        run: npm run build
       - name: Test frontend
         run: npm run test:frontend
       - name: Test backend
