--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-node@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Lint
         run: npm run lint
       - name: Build
@@ -28,7 +28,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Test e2e
-        run: npm run test:e2e
+        run: npx playwright test
       - name: Deploy
         run: flyctl deploy --remote-only
         env:
