--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Test e2e
-        run: cross-env MONGODB_URI=${{ secrets.MONGODB_URI }} playwright test
+        run: playwright test
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
       - name: Deploy
         run: flyctl deploy --remote-only
         env:
