--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,32 @@ jobs:
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
       - name: Deploy
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Discord notify (success)
+        uses: rjstone/discord-webhook-notify@v1.0.0
+        if: success()
+        with:
+          text: New version deployed
+          severity: info
+          details: Deployment success!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Discord notify (failure)
+        uses: rjstone/discord-webhook-notify@v1.0.0
+        if: failure()
+        with:
+          text: Build failed 
+          severity: error
+          details: Deployment failed! Commit ${{ github.event.commits[0].url }} by ${{ github.event.commits[0].committer.username }} broke something
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }} 
+  tag_release:
+    needs: [deployment]
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Tag version
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
+        uses: anothrNick/github-tag-action@1.71.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
