--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
     needs: [deployment]
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v4
       - name: Tag version
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
         uses: anothrNick/github-tag-action@1.71.0
