--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,7 @@ jobs:
           text: New version deployed
           severity: info
           description: Deployment success!
+          details: ""
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Discord notify (failure)
         uses: rjstone/discord-webhook-notify@v1.0.0
@@ -52,6 +53,7 @@ jobs:
           severity: error
           username: jburn/GitHub
           description: Build failed,,,
+          details: ""
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   tag_release:
     needs: [deployment]
