--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Discord notify (success)
         uses: rjstone/discord-webhook-notify@v1.0.0
-        if: success()
+        if:  ${{ github.event_name == 'push' && success() }}
         with:
           text: New version deployed
           severity: info
@@ -47,12 +47,12 @@ jobs:
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Discord notify (failure)
         uses: rjstone/discord-webhook-notify@v1.0.0
-        if: failure()
+        if:  ${{ github.event_name == 'push' && failure() }}
         with:
-          text: Build failed 
+          text: Deployment failed 
           severity: error
           username: jburn/GitHub
-          description: Build failed,,,
+          description: Deployment failed,,,
           details: ""
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   tag_release:
